--- a/labs/demo/openshift-networking/networkpolicies/docs/externalNameService.adoc
+++ b/labs/demo/openshift-networking/networkpolicies/docs/externalNameService.adoc
@@ -1,37 +1,44 @@
-Lock Down Egress and Hide External Endpoints Behind an ExternalName Service
 
-This guide explains *why* and *when* to use a Kubernetes `ExternalName` Service, and *how* to secure it with NetworkPolicies so that:
+= Securing ExternalName Services with AdminNetworkPolicy, BANP, and Developer NetworkPolicies
 
-* Developers only call *internal* services.
-* Platform/security teams control the real external endpoints and IPs.
-* The cluster egress behavior is deterministic and auditable.
+This guide explains how to securely expose external APIs to applications using Kubernetes `ExternalName` Services, enforced by a layered network security model:
 
-== When to use an ExternalName service
+- **AdminNetworkPolicy (ANP)** and **BaselineAdminNetworkPolicy (BANP)** enforce the cluster perimeter: default deny, DNS, monitoring, and (if allowed) egress to specific external networks.
+- **Developer NetworkPolicies** control pod-to-pod and in-namespace egress, but cannot override the perimeter set by ANP/BANP.
+
+This pattern ensures:
+
+- Developers only call *internal* service names.
+- Platform/security teams control which namespaces can reach external endpoints (via ANP labels and policy).
+- All egress is deterministic, auditable, and tightly controlled.
+
+
+== When to use an ExternalName Service
 
 Use an `ExternalName` Service when:
 
-* Your applications must call an external SaaS/API (for example: `api.vulnerawise.ai`).
-* You do **not** want developers hardcoding external hostnames or IP addresses.
-* You want a stable, cluster-internal DNS name that the platform team can later repoint without touching application code.
-* You want to combine this with NetworkPolicies to only allow egress to the specific IPs/ports that back that service.
+- Applications must call an external SaaS/API (e.g., `api.vulnerawise.ai`).
+- You want to avoid developers hardcoding external hostnames or IPs.
+- You want a stable, internal DNS name that the platform team can repoint as needed.
+- You want to combine this with strict egress controls enforced by ANP/BANP and developer NetworkPolicies.
 
-With this pattern, developers treat the external API as just another Service in the cluster; only the platform team worries about IPs, TLS endpoints, and egress policy.
+With this pattern, developers treat the external API as an internal Service. Platform/security teams control the real external endpoints and which namespaces can reach them, enforced by AdminNetworkPolicy.
 
-== High-level architecture
 
-1. Applications call an internal DNS name: `https://vulnerawise-api.externalname.svc`.
-2. Kubernetes DNS maps that name to the external hostname: `api.vulnerawise.ai` via an `ExternalName` Service.
-3. A strict *default deny egress* NetworkPolicy blocks all outbound traffic.
-4. Additional NetworkPolicies selectively re-enable:
-   * DNS resolution.
-   * Egress only to the IP and port of the external API.
 
-Result: developers use clean, internal endpoints; security teams control and lock down the real egress paths.
+== High-level Architecture: ANP-based Egress Control
 
-== Step 1: Create the ExternalName service
+1. **AdminNetworkPolicy (ANP)** and **BANP** enforce a default deny perimeter for all owned namespaces. Only namespaces with the label `security.allow/networks: "true"` can egress to approved external networks.
+2. Applications call an internal DNS name: `https://vulnerawise-api.externalname.svc`.
+3. Kubernetes DNS maps that name to the external hostname: `api.vulnerawise.ai` via an `ExternalName` Service.
+4. The ANP allows egress to the specific IP range for `api.vulnerawise.ai` (as determined by platform/security). No developer NetworkPolicy is required for egress; the ANP enforces the perimeter.
 
-Applications should *not* hardcode external hostnames or IPs.
-Instead, define a stable, internal Service that points to the external host:
+Result: Developers use clean, internal endpoints. Security teams control which namespaces can egress, and to which destinations, enforced by ANP/BANP. Developer NetworkPolicies are not required for egress in this pattern.
+
+
+== Step 1: Create the ExternalName Service
+
+Applications should *not* hardcode external hostnames or IPs. Instead, define a stable, internal Service that points to the external host:
 
 [source,bash]
 ----
@@ -56,7 +63,8 @@ https://vulnerawise-api.externalname.svc
 
 Kubernetes DNS transparently maps that internal name to `api.vulnerawise.ai`. If the SaaS provider changes IP or hostname, platform teams update the Service or DNS, not application code.
 
-== Step 2: Deploy a test pod
+
+== Step 2: Deploy a Test Pod
 
 To verify the flow and policies end-to-end, create a simple test pod. In real environments, this is your application workload.
 
@@ -77,103 +85,58 @@ run=curltester
 
 We will use this label in all egress NetworkPolicies.
 
-== Step 3: Enforce default deny egress
 
-To make the ExternalName pattern safe, start from *zero trust* on egress: block everything, then explicitly allow what you need.
 
-[source,bash]
-----
-cat <<EOF | oc apply -f -
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-  name: deny-all-egress
-  namespace: externalname
-spec:
-  podSelector: {}
-  policyTypes:
-  - Egress
-EOF
-----
+// Step 3 removed: Default deny egress is enforced by ANP/BANP, not by developer NetworkPolicy. No additional deny-all egress policy is required at the namespace level.
 
-At this point, DNS resolution, API calls, and all other external traffic from the namespace are blocked.
 
-== Step 4: Allow only DNS (port 5353)
 
-This cluster resolves DNS using CoreDNS exposed locally on port `5353`. To let the pod resolve the ExternalName, we selectively re-enable DNS egress.
+// Step 4 removed: DNS egress is always allowed for owned namespaces by ANP. No developer NetworkPolicy is required for DNS.
 
-[source,bash]
-----
-cat <<EOF | oc apply -f -
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-  name: allow-dns
-  namespace: externalname
-spec:
-  podSelector:
-    matchLabels:
-      run: curltester
-  policyTypes:
-  - Egress
-  egress:
-  - ports:
-    - protocol: UDP
-      port: 5353
-    - protocol: TCP
-      port: 5353
-EOF
-----
 
-Now the pod can resolve DNS, but still cannot reach any external IPs.
 
-== Step 5: Allow egress only to the API IP
+== Step 3: Allow Egress to the API IP Range (ANP)
 
-Next, we tie the ExternalName to a *single* IP and port using NetworkPolicy.
-
-First, look up the current IP for the external API (this can be done by platform/security):
+Platform/security determines the current IP range for the external API (e.g., `api.vulnerawise.ai`).
 
 [source]
 ----
-api.vulnerawise.ai -> 51.79.73.188
+api.vulnerawise.ai -> 51.79.73.188/32
 ----
 
-Then allow only that IP on TCP/443:
+The ANP is configured to allow egress to this IP range for namespaces with the label `security.allow/networks: "true"`:
 
-[source,bash]
+[source,yaml]
 ----
-cat <<EOF | oc apply -f -
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
+apiVersion: policy.networking.k8s.io/v1alpha1
+kind: AdminNetworkPolicy
 metadata:
-  name: allow-vulnerawise-egress
-  namespace: externalname
+  name: corporate-external-networks-guardrail
 spec:
-  podSelector:
-    matchLabels:
-      run: curltester
-  policyTypes:
-  - Egress
+  priority: 12
+  subject:
+    namespaces:
+      matchLabels:
+        security.allow/networks: "true"
   egress:
-  - to:
-    - ipBlock:
-        cidr: 51.79.73.188/32
-    ports:
-    - protocol: TCP
-      port: 443
-EOF
+    - name: allow-vulnerawise-api
+      action: Allow
+      to:
+        - networks:
+            - 51.79.73.188/32
+      ports:
+        - portNumber:
+            protocol: TCP
+            port: 443
 ----
 
-Now the pod can:
+No developer NetworkPolicy is required for egress. The ANP enforces the perimeter and allows only the approved external API IP/port.
 
-* Resolve the ExternalName via DNS.
-* Reach only `51.79.73.188:443` (the external API).
 
-All other egress remains blocked.
 
-== Step 6: Test the secured ExternalName path
+== Step 4: Test the Secured ExternalName Path
 
-Verify each step from the application’s perspective.
+Verify each step from the application’s perspective. If the namespace does not have `security.allow/networks: "true"`, all external calls will be blocked by ANP regardless of developer NetworkPolicy.
 
 DNS resolution using the internal name:
 
@@ -205,30 +168,35 @@ Try a blocked destination (should fail):
 oc -n externalname exec curltester -- curl -vk https://google.com
 ----
 
-== What developers see vs. what security controls
+
+
+== Enforcement Boundaries: Developers vs. Security
 
 From the *developer* point of view:
 
-* They call `https://vulnerawise-api.externalname.svc` like any other internal Service.
-* They never need to track the external hostname, IP, or TLS endpoint.
-* Changing providers or endpoints only requires a platform-level change.
+- They call `https://vulnerawise-api.externalname.svc` like any other internal Service.
+- They never need to track the external hostname, IP, or TLS endpoint.
+- Changing providers or endpoints only requires a platform-level change.
 
 From the *platform/security* point of view:
 
-* Egress is default-deny at the namespace boundary.
-* DNS exposure is limited (port 5353 only, for specific pods).
-* Only the approved external API IP/port is reachable.
-* The ExternalName Service gives a clean abstraction boundary between application code and external infrastructure.
+- Egress is default-deny at the namespace boundary, enforced by ANP/BANP.
+- Only namespaces with the label `security.allow/networks: "true"` can egress to approved external networks.
+- DNS egress is always allowed for owned namespaces.
+- No developer NetworkPolicy is required for egress in this pattern; ANP enforces the perimeter.
+- The ExternalName Service gives a clean abstraction boundary between application code and external infrastructure.
 
-== Summary: Why this pattern
 
-Using an `ExternalName` Service plus strict NetworkPolicies gives you:
 
-* Default-deny namespace egress.
-* Minimal, well-defined DNS access.
-* A single, well-controlled external endpoint per logical service.
-* Clean, internal service names for developers.
-* No reliance on EgressFirewall.
-* A repeatable, auditable pattern for controlled egress in OpenShift using pure NetworkPolicies.
+== Summary: ANP/BANP for ExternalName Egress
 
-This lets developers focus on writing code against stable internal APIs, while security and platform teams safely manage and lock down the actual external connectivity.
+Using an `ExternalName` Service plus strict AdminNetworkPolicy and BANP gives you:
+
+- Default-deny egress at the cluster perimeter (ANP/BANP)
+- Minimal, well-defined DNS access (always allowed for owned namespaces)
+- Egress to external APIs only for namespaces explicitly allowed by ANP (`security.allow/networks: "true"`)
+- Clean, internal service names for developers
+- No reliance on EgressFirewall or developer egress NetworkPolicies
+- A repeatable, auditable pattern for controlled egress in OpenShift using pure Kubernetes admin policies
+
+This lets developers focus on stable internal APIs, while security and platform teams safely manage and lock down actual external connectivity at the perimeter using ANP.
