--- a/labs/demo/openshift-networking/networkpolicies/docs/plan.adoc
+++ b/labs/demo/openshift-networking/networkpolicies/docs/plan.adoc
@@ -1,4 +1,3 @@
-
 = Cluster Network Security Operationalization Plan
 
 This document defines a phased approach for implementing a consistent, least-privilege network-security model on OpenShift, fully aligned with the actual AdminNetworkPolicies (ANPs), BaselineAdminNetworkPolicy (BANP), and onboarding workflow. It reflects the real enforcement model: monitoring ingress is always allowed by policy, only kube-API and corporate egress are label-gated, and all other flows are denied by default.
@@ -166,7 +165,77 @@ This stack matches the real enforcement and onboarding documentation and applies
 |===
 
 
-== 9. Summary
+
+== 9. Admission Controls: Blocking Allow-All NetworkPolicies
+
+To prevent developers from bypassing security baselines, a ValidatingAdmissionPolicy (VAP) is enforced to block "allow-all" NetworkPolicies in developer-owned namespaces. This ensures that only restrictive or workload-scoped policies are permitted, while any policy that would open the entire namespace is denied.
+
+**Allowed:**
+
+* Deny-all policies (ingress: [], egress: [])
+* Normal workload-scoped NetworkPolicies
+* Any restrictive rules
+
+**Blocked:**
+
+* Any NetworkPolicy that combines:
+  * podSelector: {}
+  * ingress: [{}] or egress: [{}]
+These patterns reopen the entire namespace and must be prohibited.
+
+The binding ensures the rule applies only to namespaces labeled:
+
+    business.workload/owned=true
+
+This closes the security gap without breaking developer autonomy.
+
+=== ValidatingAdmissionPolicy (VAP)
+
+Blocks allow-all but permits deny-all.
+
+```yaml
+apiVersion: admissionregistration.k8s.io/v1
+kind: ValidatingAdmissionPolicy
+metadata:
+  name: block-allow-all-netpol
+spec:
+  failurePolicy: Fail
+  matchConstraints:
+    resourceRules:
+      - apiGroups: ["networking.k8s.io"]
+        apiVersions: ["v1"]
+        operations: ["CREATE", "UPDATE", "PATCH"]
+        resources: ["networkpolicies"]
+  validations:
+    - expression: "!(
+        object.spec.podSelector == {} &&
+        (
+          (has(object.spec.ingress) && size(object.spec.ingress) == 1 && object.spec.ingress[0] == {}) ||\n+          (has(object.spec.egress)  && size(object.spec.egress)  == 1 && object.spec.egress[0]  == {})
+        )
+      )"
+      message: "Allow-all NetworkPolicies (empty {} ingress/egress rules) are forbidden. Deny-all is allowed."
+```
+
+=== ValidatingAdmissionPolicyBinding
+
+Applies only to developer-owned namespaces.
+
+```yaml
+apiVersion: admissionregistration.k8s.io/v1
+kind: ValidatingAdmissionPolicyBinding
+metadata:
+  name: block-allow-all-netpol-owned-ns
+spec:
+  policyName: block-allow-all-netpol
+  validationActions:
+    - Deny
+  matchResources:
+    namespaceSelector:
+      matchLabels:
+        business.workload/owned: "true"
+```
+
+== 10. Summary
 
 This plan operationalizes the real network-security model by:
 
@@ -174,6 +243,7 @@ This plan operationalizes the real network-security model by:
 - Gating only kube-API and corporate egress via namespace labels
 - Always allowing monitoring ingress by policy for all owned namespaces
 - Letting application teams define internal traffic with NetworkPolicies under GitOps control
+- Enforcing admission controls with ValidatingAdmissionPolicy (VAP) to block allow-all NetworkPolicies and prevent bypass of security baselines
 - Providing monitoring and feedback loops to keep the posture least-privilege and practical over time
 
 The result is a predictable, auditable, and developer-friendly network-security posture for OpenShift application namespaces.
